# svgbobdoc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl  rust-toolchain.toml
.github/workflows/: ci.yml
example/: Cargo.toml
example/src/: lib.rs
src/: lib.rs  textproc.rs  xform_attr.rs
