[package]
name = "svgbobdoc"
version = "0.2.3"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/svgbobdoc"
description = """
Renders ASCII diagrams in doc comments as SVG images.
"""
keywords = ["rustdoc", "documentation", "svg", "diagram", "figure"]
categories = ["development-tools"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = []
enable = ["svgbob", "regex", "lazy_static", "base64", "unicode-width"]

[dependencies]
syn = "1"
quote = "1"
svgbob = { version = "0.5", optional = true }
proc-macro2 = "1"
regex = { version = "1", optional = true }
lazy_static = { version = "1.1", optional = true }
base64 = { version = ">= 0.5.2, < 0.13", optional = true }
unicode-width = { version = "0.1", optional = true }

[lib]
proc-macro = true
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "example",
]
