[package]
name = "svgbobdoc"
version = "0.3.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/yvt/svgbobdoc"
description = """
Renders ASCII diagrams in doc comments as SVG images.
"""
keywords = ["rustdoc", "documentation", "svg", "diagram", "figure"]
categories = ["development-tools"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = []
enable = ["svgbob"]

[dependencies]
syn = "2"
quote = "1"
svgbob = { version = "0.7", optional = true }
proc-macro2 = "1"
base64 = ">= 0.21, < 0.23"
unicode-width = ">= 0.1, < 0.3"

[lib]
proc-macro = true
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "example",
]
